feat: Implement supabase database

--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "@mui/material": "^5.15.12",
     "@mui/x-charts": "^7.0.0",
     "@mui/x-date-pickers": "^7.1.0",
+    "@supabase/supabase-js": "^2.43.4",
     "antd": "^5.15.3",
     "apexcharts": "^3.48.0",
+    "axios": "^1.7.2",
     "jodit-react": "^4.0.15",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
